# pre-commit-black

./: .pre-commit-config.yaml  README.md  pyproject.toml
ignored/: ostensibly_ignored.py
