[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
)\
'''
force-exclude = '''
/(
   ignored                     # files in this dir are ignored
)\
'''


[tool.poetry]
name = "pre-commit-black"
version = "0.1.0"
description = ""
authors = ["jidicula <johanan@forcepush.tech>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
black = {git = "git@github.com:psf/black.git", rev = "master"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
